// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/AppContainer Routes should render  1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <Switch>
    <Route
      component={[Function]}
      exact={true}
      path="/sign-in"
    />
    <PrivateRoute
      component={[Function]}
      exact={true}
      isSignedIn={true}
      path="/"
    />
    <RedirectRoute
      from="/questionnaire/:questionnaireId/design/:sectionId/:pageId"
      to="/questionnaire/:questionnaireId/:sectionId([a-f0-9-]+)/:pageId([a-f0-9-]+)/design"
    />
    <RedirectRoute
      from="/questionnaire/:questionnaireId/design/:sectionId"
      to="/questionnaire/:questionnaireId/:sectionId([a-f0-9-]+)/design"
    />
    <PrivateRoute
      component={[Function]}
      exact={false}
      isSignedIn={true}
      path="/questionnaire/:questionnaireId/:sectionId([a-f0-9-]+)?/:pageId([a-f0-9-]+)?/:confirmationId([a-f0-9-]+)?/:tab?"
    />
    <Route
      component={[Function]}
      exact={true}
      path="*"
    />
  </Switch>
</Router>
`;

exports[`containers/AppContainer should render 1`] = `
<t>
  <ApolloProvider
    client={
      Object {
        "query": [MockFunction],
        "readQuery": [MockFunction],
      }
    }
  >
    <Provider
      store={
        Object {
          "dispatch": [MockFunction],
          "getState": [MockFunction],
          "subscribe": [MockFunction],
        }
      }
    >
      <Connect(Routes)
        history={
          Object {
            "action": "POP",
            "block": [Function],
            "createHref": [Function],
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "length": 1,
            "listen": [Function],
            "location": Object {
              "hash": "",
              "pathname": "/",
              "search": "",
              "state": undefined,
            },
            "push": [Function],
            "replace": [Function],
          }
        }
      />
    </Provider>
  </ApolloProvider>
</t>
`;
